# course_5_BD

./: README.md  main.py  pyproject.toml
src/api/: constants.py  headhunter.py
src/db/: config.py  dbmanager.py
src/utils/: utils.py
